plugins {
    id 'java'
    id 'org.springframework.boot' version '3.2.5'
    // swagger 버전 문제 때문에 스프링부트 버전 낮춤
    // id 'org.springframework.boot' version '3.5.3'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.nexus'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
    maven {url 'https://jitpack.io'}
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    compileOnly 'org.projectlombok:lombok'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    runtimeOnly 'com.mysql:mysql-connector-j'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    //AWS
    implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'

    // swagger
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'
    
    // google bucket 사용 (음성파일 저장)
    implementation 'com.google.cloud:google-cloud-storage:2.28.0' 

    // PortOne (결제)
    implementation 'com.github.iamport:iamport-rest-client-java:0.2.23'
    //  implementation files(
    //       'libs/iamport-rest-client-java-0.2.23.jar',
    //       'libs/retrofit-2.9.0.jar',
    //       'libs/converter-gson-2.9.0.jar',
    //       'libs/okhttp-3.14.9.jar',
    //       'libs/gson-2.8.9.jar',
    //       'libs/okio-1.17.2.jar'
    //  )

    // redis 사용
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
    implementation 'com.fasterxml.jackson.core:jackson-databind'
    implementation 'org.apache.commons:commons-pool2'
    // implementation files('/libs/commons-pool2-2.11.1.jar')

    // chatting
    implementation 'org.springframework.boot:spring-boot-starter-websocket'
    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
}

tasks.named('test') {
    useJUnitPlatform()
}
